# chromascope

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  configure_logger.txt  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/: CONTRIBUTING.md
.github/workflows/: CI.yml  build_release.yml  deploy-docs.yml  release.yml
chromascope/: all.html  fn.main.html  index.html  sidebar-items.js
chromascope/gui/: constant.FILE_FORMAT.html  enum.FileValidity.html  enum.StateChange.html  index.html  sidebar-items.js  struct.MzViewerApp.html  struct.UserInput.html
chromascope/parser/: constant.MS_LEVEL.html  index.html  sidebar-items.js  struct.MzData.html
chromascope/plotting_parameters/: constant.DASHED_LINE_LENGTH.html  constant.DOTTED_LINE_SPACING.html  enum.LineColor.html  enum.LineType.html  enum.PlotType.html  index.html  sidebar-items.js
docs/: help.html  search-index.js  settings.html
docs/chromascope/: all.html  fn.main.html  index.html
docs/chromascope/gui/: constant.FILE_FORMAT.html  enum.FileValidity.html  enum.StateChange.html  index.html  struct.MzViewerApp.html  struct.UserInput.html
docs/chromascope/parser/: constant.MS_LEVEL.html  index.html  struct.MzData.html
docs/chromascope/plotting_parameters/: constant.DASHED_LINE_LENGTH.html  constant.DOTTED_LINE_SPACING.html  enum.LineColor.html  enum.LineType.html  enum.PlotType.html  index.html
docs/src/chromascope/: gui.rs.html  main.rs.html  parser.rs.html  plotting_parameters.rs.html
docs/trait.impl/core/cmp/: trait.PartialEq.js
src/: gui.rs  line_color.rs  line_type.rs  main.rs  parser.rs  plot_type.rs  plotting_parameters.rs
src/chromascope/: gui.rs.html  main.rs.html  parser.rs.html  plotting_parameters.rs.html
test_file/: data_dependent_02.mzML
trait.impl/core/cmp/: trait.PartialEq.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
(+12 files in other folders)
